kubernetes/manifests/bsk-api/_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: bsk-api
    name: bsk-api
  name: bsk-api
