kubernetes/manifests/bsk-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsk-api
  namespace: bsk-api
spec:
  selector:
    app: bsk-api
  ports:
  - protocol: TCP
    port: 80 # The port the service exposes
    targetPort: 8080 # The port the container exposes
  type: ClusterIP # Or LoadBalancer if you're on a cloud provider
---
